.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Metadata_Log__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Async_Request_Id__c</fullName>
        <description>Id of the retrieval or deployment request sent to Salesforce organisation</description>
        <label>Deployment Name</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flosum__Batch_Job_Id__c</fullName>
        <description>Job Id which is processing Metadata types and items</description>
        <label>Batch Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Build</label>
        <referenceTo>Flosum__Build__c</referenceTo>
        <relationshipLabel>Metadata Logs</relationshipLabel>
        <relationshipName>Metadata_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Error_Log__c</fullName>
        <label>Error Log</label>
        <length>32001</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__Job_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show if the process related to deployment or retrieve has been completed or not for the current  Async request Id</description>
        <label>Job Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Metadata_Types__c</fullName>
        <label>Metadata Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Options__c</fullName>
        <description>Other options for deployment/validation</description>
        <label>Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flosum__Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Flosum__Organisation__c</referenceTo>
        <relationshipLabel>Metadata Logs</relationshipLabel>
        <relationshipName>Metadata_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Patch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>Flosum__Patch__c</referenceTo>
        <relationshipLabel>Metadata Logs</relationshipLabel>
        <relationshipName>Metadata_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Process_Log__c</fullName>
        <description>Log detail of Deployment/Retrieval</description>
        <label>Specified Tests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__Process_Type__c</fullName>
        <description>Determine the process for which the log has been created</description>
        <label>Process Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Patch</fullName>
                    <color>#0B6FCE</color>
                    <label>Patch</label>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                    <color>#78C953</color>
                    <label>Deployment</label>
                </value>
                <value>
                    <fullName>Validate</fullName>
                    <color>#E27001</color>
                    <label>Validate</label>
                </value>
                <value>
                    <fullName>Retrieve</fullName>
                    <color>#A845DC</color>
                    <label>Retrieve</label>
                </value>
                <value>
                    <fullName>Rollback (Validate)</fullName>
                </value>
                <value>
                    <fullName>Rollback (Deployment)</fullName>
                </value>
                <value>
                    <fullName>Schedule Deployment</fullName>
                </value>
                <value>
                    <fullName>Test Execution</fullName>
                </value>
                <value>
                    <fullName>Test Execution Job</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Run_Test_Param__c</fullName>
        <label>Run Test Param</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Schedule_Time__c</fullName>
        <label>Schedule Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Snapshot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Snapshot</label>
        <referenceTo>Flosum__Snapshot__c</referenceTo>
        <relationshipLabel>Metadata Logs</relationshipLabel>
        <relationshipName>Metadata_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Succeed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show if the job process completed with success or error</description>
        <label>Succeed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Success_Log__c</fullName>
        <label>Success Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__Total_Items__c</fullName>
        <formula>IF( Flosum__Patch__c != null,   IF( Flosum__Patch__r.RecordType.Name = &apos;Repository&apos;, Flosum__Patch__r.Flosum__Total_Items_in_Patch_Repository__c ,  IF(Flosum__Patch__r.RecordType.Name = &apos;PatchManifest&apos;,  Flosum__Patch__r.Flosum__Total_Items__c , Flosum__Patch__r.Flosum__Total_Items_in_Patch__c)),  Flosum__Snapshot__r.Flosum__No_of_Metadata_Items__c )</formula>
        <label>Total Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Metadata Log</label>
    <listViews>
        <fullName>Flosum__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ML-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Metadata Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Logs</pluralLabel>
    <recordTypes>
        <fullName>Flosum__Validate</fullName>
        <active>true</active>
        <label>Validate</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>